...
                Text(pageName)
            }
        },
        text = {
            Column {
                DropdownMenuItem(
                    text = { Text("Rename") },
                    leadingIcon = { Icon(Icons.Filled.DriveFileRenameOutline, contentDescription = null) },
                    onClick = onRename
                )
                DropdownMenuItem(
                    text = { Text("Set as home page") },
                    leadingIcon = { Icon(Icons.Filled.Home, contentDescription = null) },
...
